[package]
name = "collide-and-sound"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
rand = "0.8.5"
rapier2d = "0.18.0"
rodio = { version = "0.17.3", default-features = false, features = ["wav"] }
sfml = "0.21.0"
